pwa: padding issue on mobile safe top

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -104,6 +104,10 @@ b-panel {
     --b-menu-input-padding: .5em;
 }
 
+b-panel[anchor="top"] > * {
+    padding-top: var(--safe-top);
+}
+
 :root.installed.mac:not(.ios) b-panel {
     --b-panel-radius: .75rem;
 }
